[package]
name = "kay"
version = "0.1.0"
authors = ["jsen- <max.enhanced@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
structopt = { version = "0.2.18", default_features = false, features = ["suggestions", "color", "wrap_help"] }
snafu = { version = "0.4.3", default_features = false, features = [ "rust_1_30" ] }
strict-yaml-rust = "0.1.1"
atty = "0.2.13"
jsonpath_lib = "0.2.3"
serde_json = "1.0.40"
